--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -15,16 +15,13 @@ framework:
             failed: 'doctrine://default?queue_name=failed'
             sync: 'sync://'
 
-        default_bus: messenger.bus.default
-
+        default_bus: command.bus
         buses:
-            messenger.bus.default: []
+            command.bus: ~
+            query.bus: ~
+            message.bus: ~
 
         routing:
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
-            App\Message\AddStudent: sync
-
-            # Route your messages to the transports
-            # 'App\Message\YourMessage': async
