--- a/composer.json
+++ b/composer.json
@@ -97,7 +97,7 @@
             "./vendor/bin/ecs check",
             "bin/console lint:yaml config --parse-tags",
             "bin/console lint:container",
-            "./vendor/bin/phpstan analyse --memory-limit=-1 --configuration=phpstan.dist.neon",
+            "./vendor/bin/phpstan analyse --memory-limit=-1 --configuration=phpstan.neon",
             "./vendor/bin/rector --dry-run"
         ],
         "app:tests": [
